--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/SonofLight/DWPO-API-FInal#readme",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "express": "^4.13.4"
+  },
+  "devDependencies": {
+    "mocha": "^2.4.5"
   }
 }
