--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.13.4"
   },
   "devDependencies": {
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "supertest": "^1.2.0"
   }
 }
